# argo-wrapper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  Dockerfile  Jenkinsfile  NOTICE  README.md  argo-wrapper-deploy.yaml  config.ini  flake.nix  pyproject.toml
.github/: labeler.yml
.github/workflows/: build-push-image.yaml  ci.yaml  image_push_build.yaml  integration_tests.yaml  labeler.yml  lint.yaml  test_coverage.yaml
doc/: generate_swagger_yaml.py  openapi.yaml
doc/readmes/: apis.md
docs/: openapi.yaml
docs/readmes/: apis.md  argo-engine.md  argo-templates.md  deploy.md  local-dev.md  swagger.md
docs/swagger/: generate_swagger_yaml.py  swagger.yaml
src/argo-wrapper/: app.py  asgi.py  constants.py  main.py
src/argo-wrapper/engine/: __init__.py  argo_engine.py
src/argo-wrapper/routes/: workflow.py
src/argowrapper/: __init__.py  app.py  constants.py  utils.py
src/argowrapper/argo_workflows/: test.yaml
src/argowrapper/argo_workflows_templates/: gwas.yaml  header.yaml  header_no_nodeselector.yaml  test.yaml
src/argowrapper/auth/: auth.py  utils.py
src/argowrapper/engine/: argo_engine.py
src/argowrapper/engine/helpers/: argo_engine_helper.py  test.py  workflow_factory.py
src/argowrapper/routes/: routes.py  workflow.py
src/argowrapper/workflows/: workflow_base.py  workflow_metadata.py  workflow_spec.py
src/argowrapper/workflows/argo_workflows/: gwas.py  plp.py
test/: config_for_local_testing.ini  constants.py  test.py  test_argo_engine.py  test_argo_engine_helper.py  test_auth.py  test_gwas_workflow.py  test_routes.py
workflow_examples/: dummy_workflow.yaml  gwas_header.yaml
