[tool.poetry]
name = "argowrapper"
version = "2.2.0"
description = "argo wrapper for va workflow"
authors = ["UchicagoZchen138 <zchen138@uchicago.edu>"]
repository = "https://github.com/uc-cdis/argo-wrapper"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
gunicorn = "^20.0.4"
importlib-metadata = "^4.10.0"
PyYAML = "6.0.1"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.20"
cdislogging = "^1.1.1"
argo-workflows = "6.4.7"
gen3authz = "^1.5.0"
importlib-resources = "^5.4.0"
requests = "^2.27.1"
PyJWT = "^2.4.0"
pytest-cov = "^3.0.0"
freezegun = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
