[tool.poetry]
name = "argowrapper"
version = "2.2.0"
description = "argo wrapper for va workflow"
authors = ["UchicagoZchen138 <zchen138@uchicago.edu>"]
readme = "README.md"
repository = "https://github.com/uc-cdis/argo-wrapper"

[tool.poetry.dependencies]
python = "^3.9"
argo-workflows = "^6.5"
cdislogging = "^1.1.1"
fastapi = "^0"
gen3authz = "^1.5.0"
gunicorn = "^22.0"
PyJWT = "^2.9"
PyYAML = "^6.0"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.5"
pytest = "^6.2"
pytest-asyncio = "^0"
pytest-cov = "^5.0"
pytest-mock = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
